jerix.co.uk/eso/templates/less/bootstrap/jumbotron.less
/* Jumbotrons
-------------------------------------------------- */

/* Base class
------------------------- */
.jumbotron {
  position: relative;
  padding: 40px 0;
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
  background: #002600; /* Old browsers */
  background: -moz-linear-gradient(45deg, #002600 0%, #2d602f 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#002600), color-stop(100%,#2d602f)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(45deg, #002600 0%,#2d602f 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(45deg, #002600 0%,#2d602f 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(45deg, #002600 0%,#2d602f 100%); /* IE10+ */
  background: linear-gradient(45deg, #002600 0%,#2d602f 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002600', endColorstr='#2d602f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002600', endColorstr='#3e8445',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
     -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
          box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
}
.jumbotron h1 {
  font-size: 80px;
  font-weight: bold;
  letter-spacing: -1px;
  line-height: 1;
}
.jumbotron p {
  font-size: 18px;
  font-weight: 300;
  line-height: 20px;
  margin-bottom: 30px;
}

/* Link styles (used on .masthead-links as well) */
.jumbotron a {
  color: #fff;
  color: rgba(255,255,255,.5);
  -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
          transition: all .2s ease-in-out;
}
.jumbotron a:hover {
  color: #fff;
  text-shadow: 0 0 10px rgba(255,255,255,.25);
}

/* Masthead (docs home)
------------------------- */
.masthead {
  padding: 70px 0 80px;
  color: #fff;
  margin: 0;
}
.masthead h1 {
  font-size: 120px;
  line-height: 1;
  letter-spacing: -2px;
}
.masthead p {
  font-size: 40px;
  font-weight: 200;
  line-height: 1.25;
}

/* Textual links in masthead */
.masthead-links {
  margin: 0;
  list-style: none;
}
.masthead-links li {
  display: inline;
  padding: 0 10px;
  color: rgba(255,255,255,.25);
}

/* Subhead (other pages)
------------------------- */
.subhead {
  text-align: left;
  border-bottom: 1px solid #ddd;
}
.subhead h1 {
  font-size: 60px;
  small {
      color: white;
  }
}
.subhead p {
  margin-bottom: 20px;
}
.subhead .navbar {
  display: none;
}

